--- a/src/css/test.css
+++ b/src/css/test.css
@@ -12,7 +12,7 @@
 
 
 .light-box{
-    display: none;
+    display: flex;
     position: fixed;
     top:0;
     left: 0;
@@ -31,9 +31,11 @@
 }
 .center{
     width: 400px;
-    height: 400px;
-    border: 1px solid orange;
+    height: auto;
+    border: 2px solid orange;
     margin: auto;
+    overflow: hidden;
+    object-fit: cover;
 }
 
 .close{
