--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -46,7 +46,7 @@
         width: 340px;
         height: 511px;
         justify-items: center;
-        background: #f5f5f5;
+        background: rgba(27, 5, 81, 0.8);
         padding-top: 20px;
         box-shadow: 1px 1px 100px  black;
     }
